# Estudos-Inteligencia-Artificial

./: README.md  projeto.md  pyproject.toml  topicos.md
labs/algebra_linear/: estudo01.ipynb
